<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="20dp"
            android:paddingHorizontal="10dp"
            android:layout_gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_gravity="bottom" />

                <com.google.android.material.button.MaterialButton
                    style="?attr/materialIconButtonFilledStyle"
                    android:id="@+id/btn_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_logout_24"
                    app:icon="@drawable/ic_logout_24"
                    android:contentDescription="Logout" />

            </LinearLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_user_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="12345678901234567890"
                android:textSize="28sp" />

        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.CardView.Elevated"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:gravity="center">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_street_loc"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_dark_primaryContainer"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="8dp">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialIconButtonFilledStyle"
                            android:clickable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_location_on_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/store_location"
                            android:ellipsize="end"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:textSize="12sp"/>

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_our_products"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_dark_primaryContainer"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="8dp">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialIconButtonFilledStyle"
                            android:clickable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_shopping_bag_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/our_products"
                            android:ellipsize="end"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:textSize="12sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <Space
                    android:layout_width="10dp"
                    android:layout_height="wrap_content" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/mcv_track_history"
                    style="@style/Widget.Material3.CardView.Elevated"
                    android:clickable="true"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/md_theme_dark_primaryContainer"
                    android:focusable="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:padding="8dp">

                        <com.google.android.material.button.MaterialButton
                            style="?attr/materialIconButtonFilledStyle"
                            android:clickable="false"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:icon="@drawable/ic_history_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/track_history"
                            android:ellipsize="end"
                            android:textAlignment="center"
                            android:maxLines="1"
                            android:textSize="12sp" />

                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textview.MaterialTextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_brands"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_margin="5dp"
            android:id="@+id/rv_product_brand"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:clipChildren="false"
            android:clipToPadding="false" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_comers"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineMedium"/>

        <GridLayout
            android:id="@+id/gl_new_arrival"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rowCount="3"
            android:columnCount="2" />

    </LinearLayout>

</ScrollView>

