<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/Widget.Material3.CardView.Elevated"
    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
    android:layout_margin="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:clickable="false"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_bag_24"
                style="@style/Widget.Material3.Button.IconButton"
                app:tint="@color/md_theme_dark_primary"
                android:contentDescription="@string/product_transaction" />

            <TextView
                android:id="@+id/transactionDate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                tools:text="12 Januari 2023"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:gravity="center|start"
                android:textColor="@color/md_theme_dark_primary"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="8dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/md_theme_dark_primary">

                    <TextView
                        android:id="@+id/transactionStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginHorizontal="10dp"
                        android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                        android:textColor="@color/md_theme_dark_primaryContainer"
                        android:textStyle="bold"
                        tools:text="Completed" />

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="10dp"
            app:dividerInsetEnd="10dp"/>

        <LinearLayout
            android:id="@+id/purchasedProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:divider="@drawable/divider_vertical_10"
            android:showDividers="middle"/>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:dividerInsetStart="10dp"
            app:dividerInsetEnd="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"/>

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    tools:text="Rp200.000,00" />

            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reorderBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reorder"
                android:layout_margin="10dp"
                style="@style/Widget.Material3.Button.TonalButton"
                app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Small"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>